Add promise spec test code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,13 @@
         "module": "commonjs",
         "outDir": "./dist",
         "strict": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "lib": [
+            "dom",
+            "es5",
+            "scripthost",
+            "es2015.promise"
+        ]
     },
     "include": [
         "src/**/*"
